Update Silverpeas Core to be built with Java 17 and to use the new Silverpeas Compressor to minify both JS and CSS assets